--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ footer {
     padding: 10px;
     background-color: #333;
     color: white;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     bottom: 0;
 }
